app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sportzia
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sportzia-app
  namespace: sportzia
  labels:
    app: frontend
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      # nodeSelector:
      #   eks.amazonaws.com/nodegroup: stage-private
      containers:
      - name: frontend
        image: sathish8329/sportzia:2413
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 10 
          failureThreshold: 3

---

apiVersion: v1
kind: Service
metadata:
  name: sportzia-app-service
  namespace: sportzia
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000          # External port exposed for the service
      targetPort: 3000    # Fix: This should match containerPort in Deployment
  type: ClusterIP        # Change to LoadBalancer if you need external access

---
