ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sportzia-ingress
  namespace: sportzia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: "100m"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
spec:
  rules:
  - host: "sportzia.com"  # Root domain for frontend service
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sportzia-app-service # Frontend service
            port:
              number: 3000  # Fix: Matches the service port
  - host: "www.sportzia.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sportzia-app-service
            port:
              number: 3000  # Fix: Matches the service port
