redirect-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redirect-sportzia
  namespace: sportzia
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/permanent-redirect: "https://www.sportzia.com$request_uri"
spec:
  rules:
  - host: sportzia.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dummy-service  # won't be used, just required
            port:
              number: 80
